# pcoll

./: CMakeLists.txt  README.md
src/: cryptohash.cpp  cryptohash.hpp  diffhash.cpp  diffhash.hpp  filechecksum.cpp  filechecksum.hpp  filesystem.hpp  pcoll.cpp  pcoll.hpp  pcoll_database.cpp  pcoll_database.hpp  pcoll_main.cpp  task_queue.cpp  task_queue.hpp  utility.cpp  utility.hpp
